================================ Next release ================================

Bug fixes:
    - The bundled logging configuration should no longer emit duplicate log
      messages.

========================== Release 0.4.4 2012-06-12 ==========================

Bug fixes:
    - No longer requires graypy by default via the logging configuration.
    - Buildout now refers to the correct contrib package names.

========================== Release 0.4.3 2012-06-12 ==========================

Internal changes:
    - The ZooKeeper contrib is more determined about closing previous
      connections to avoid leaking unused clients and clears its cache
      when connections are re-established.

Backward-incompatible changes:
    - The ZooKeeper contrib now raises zookeeper.ClosingException exceptions
      for attempted method calls to a stopped client instead of the previous
      AttributeError

========================== Release 0.4.2 2012-02-29 ==========================

Internal changes:
    - The bundled logging.yaml configuration file now defaults to "INFO"
      instead of "DEBUG"

    - The Cyclone contrib now includes XSRF-tokens in the debugging template.

Backward-incompatible changes:
    - The ZooKeeper contrib now proxies a client instead of subclassing it
      in order to more easily facilitate reconnects.

========================== Release 0.4.0 2012-02-26 ==========================

Backward-incompatible changes:
    - piped.log is deprecated and the standard Python logging module should
      be used instead.

    - ``piped -l`` now no longer is the name of a file to log to, but the name
      of a logging configuration file. See the ``logging.yaml`` file included
      in the piped distribution for example usage.


========================== Release 0.3.2 2012-02-18 ==========================

Internal changes:
    - piped.dependencies.DependencyMap now has a ``.get_dependency(key)`` method