@@ -59,9 +59,9 @@ copyright = u'2011-2012, Found IT A/S'
 # built documents.
 #
 # The short X.Y version.
-version = '0.3.1'
+version = '0.4.5'
 # The full version, including alpha/beta/rc tags.
-release = '0.3.1'
+release = '0.4.5'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
