@@ -4,19 +4,19 @@ root:
     level: INFO
     handlers:
       - console
-      #- file
+      - file
       #- graylog2
 
 loggers:
     piped:
-        level: INFO # override to affect logging for piped only
+        level: DEBUG # override to affect logging for piped only
         #handlers: [console]
         #propagate: false
 
 handlers:
   console:
     class: logging.StreamHandler
-    formatter: default
+    formatter: repl_aware_default
     stream: ext://sys.stdout
     #level: DEBUG
 
@@ -37,5 +37,9 @@ handlers:
 formatters:
   default:
     (): piped.log.UTCFormatter
+    format: '%(asctime)s [%(levelname)-5s] [%(name)-25s] %(message)s'
+    datefmt: '%Y-%m-%dT%H:%M:%S,%03.f'
+  repl_aware_default:
+    (): piped.log.REPLAwareUTCFormatter
     format: '%(asctime)s [%(levelname)-5s] [%(name)-25s] %(message)s'
     datefmt: '%Y-%m-%dT%H:%M:%S,%03.f'
