@@ -1,5 +1,12 @@
 ================================ Next release ================================
 
+Features:
+    - REPL: Piped now comes with a built-in REPL (a Read-Eval-Print loop,
+      similar to the Python shell). To start the REPL, use the "--repl"
+      command line switch. For more information about the REPL and how
+      to configure it, see the reference documentation on the REPL provider,
+      which contains example configuration in YAML.
+
 Bug fixes:
     - The bundled logging configuration should no longer emit duplicate log
       messages.
